# mitsuba

./: .agignore  .gitignore  .hgignore  .hgtags  .ycm_extra_conf.py  CMakeLists.txt  ChangeLog  README  README.md  SConstruct  mitsuba.sln  mitsuba.vcproj  setpath.csh  setpath.sh
config/: SConscript.configure  SConscript.install  config-darwin-universal.py  config-darwin-x86.py  config-darwin-x86_64.py  config-hydra.py  config-icl11-win32.py  config-icl11-win64.py  config-linux.py  config-msvc2005-win32.py  config-msvc2005-win64.py  config-msvc2008-win32-debug.py  config-msvc2008-win32.py  config-msvc2008-win64-debug.py  config-msvc2008-win64.py  config-msvc2010-win32-debug.py  config-msvc2010-win32.py  config-msvc2010-win64-debug.py  config-msvc2010-win64.py
data/: check-style.sh  qt4.py
data/cmake/: FindCOLLADA.cmake  FindEigen.cmake  FindFFTW3.cmake  FindGLEW.cmake  FindIlmBase.cmake  FindOpenEXR.cmake  FindReleaseAndDebug.cmake  FindX11.cmake  FindXerces.cmake  MitsubaBuildOptions.cmake  MitsubaExternal.cmake  MitsubaUtil.cmake  MtsBundleUtilities.cmake  MtsGetVersionInfo.cmake  PCHTargets.cmake
data/cmake/packaging/: CMakeLists.txt  MtsFixupBundle.cmake.in
data/darwin/: Info.plist  Info.plist.in  PreviewSettings.nib  PreviewSettings.xib  add-icl-libraries.sh  build-dmg.sh  crash_report.sh  extract-symbols.sh  install-symlinks.sh  lipo.sh  qmake_fake.c  strip-symbols.sh
data/ec2/: cluster.py  readme.txt
data/ior/: Ag.eta.spd  Ag.k.spd  Al.eta.spd  Al.k.spd  AlAs.k.spd  AlAs_palik.eta.spd  AlSb.eta.spd  AlSb.k.spd  Au.eta.spd  Au.k.spd  Be.eta.spd  Be.k.spd  Be_palik.eta.spd  Be_palik.k.spd  CMakeLists.txt  Cr.eta.spd  Cr.k.spd  CsI.eta.spd  CsI.k.spd  CsI_palik.eta.spd  CsI_palik.k.spd  Cu.eta.spd  Cu.k.spd  Cu2O.eta.spd  Cu2O.k.spd  Cu2O_palik.eta.spd  Cu2O_palik.k.spd  CuO.eta.spd  CuO.k.spd  CuO_palik.eta.spd  CuO_palik.k.spd  Cu_palik.eta.spd  Cu_palik.k.spd  Hg.eta.spd  Hg.k.spd  HgTe.k.spd  HgTe_palik.eta.spd  Hg_palik.eta.spd  Hg_palik.k.spd  Ir.eta.spd  (+80 more)
data/linux/: build-sourcedist.sh  mitsuba.desktop  nvidia.supp
data/microfacet/: CMakeLists.txt
data/pch/: mitsuba_precompiled.hpp
data/plugin-starter-kit/: README  SConstruct  myutil.cpp
data/schema/: CMakeLists.txt  scene.xsd  upgrade_0.3.0.xsl  upgrade_0.4.0.xsl  upgrade_0.5.0.xsl  upgrade_0.6.0.xsl
data/scons/: detect_python.py  icl12.py  qt4.py  qt5.py
data/scripts/: rendertime.py
data/tests/: bunny.ply  test_bidir_0.xml  test_bidir_1.xml  test_bidir_2.xml  test_bsdf.xml  test_emitter.xml  test_luminaire.xml  test_phase.xml
data/windows/: README.txt  build-dist.bat  extract-symbols.ps1  genproj.py  getdate.c  mitsuba-msvc2008.sln.template  mitsuba-msvc2008.vcproj.template  mitsuba-msvc2010.vcxproj.filters.template  mitsuba-msvc2010.vcxproj.template  mitsuba-msvc2017.sln.template  mitsuba-msvc2017.vcxproj.filters.template  mitsuba-msvc2017.vcxproj.template  mitsuba.vcproj.template  mitsuba_res.rc  mitsuba_res.rc.in  qmake_fake.c  wmain_stub.cpp
doc/: Doxyfile  Makefile  acknowledgements.tex  basics.tex  blender.tex  compiling.tex  development.tex  format.tex  gendoc.py  gpl-v3.tex  import.tex  integrator.tex  introduction.tex  macros.sty  main.bib  main.tex  misc.tex  parallelization.tex  plugins.tex  python.tex  section_bsdf.tex  section_emitters.tex  section_films.tex  section_integrators.tex  section_luminaires.tex  section_media.tex  section_phase.tex  section_rfilters.tex  section_samplers.tex  section_sensors.tex  section_shapes.tex  section_subsurface.tex  section_textures.tex  section_volumes.tex  todo.txt
doc/doxyfiles/: mainpage.dox
doc/images/: bidir-figures.ai  bsdf_overview.ai  bsdf_thindielectric_intscat.ai  emitter_envmap_axes.ai  emitter_overview.ai  glass_explanation.ai  integrator_path_figure.ai  path_explanation.ai  plastic_intscat.ai
include/mitsuba/: mitsuba.h
schema/: scene.xsd
src/bsdfs/: CMakeLists.txt  SConscript  blendbsdf.cpp  bump.cpp  bumpmap.cpp  chkms.cpp  coating.cpp  composite.cpp  conductor.cpp  dielectric.cpp  difftrans.cpp  diffuse.cpp  dipolebrdf.cpp  hk.cpp  ior.h  irawan.cpp  irawan.h  lambertian.cpp  mask.cpp  microfacet.cpp  microfacet.h  mirror.cpp  mixture.cpp  mixturebsdf.cpp  normalmap.cpp  null.cpp  phong.cpp  plastic.cpp  rmbrdf.cpp  roughGGX.h  roughcoating.cpp  roughconductor.cpp  roughconductorGGX.cpp  roughdielectric.cpp  roughdielectricGGX.cpp  roughdiffuse.cpp  roughdiffuseGGX.cpp  roughglass.cpp  roughmetal.cpp  roughplastic.cpp  (+6 more)
src/cameras/: SConscript  environment.cpp  orthographic.cpp  perspective.cpp
src/collada/: converter.cpp  converter.h  main.cpp
src/converter/: CMakeLists.txt  SConscript  collada.cpp  converter.cpp  converter.h  mtsimport.cpp  obj.cpp
src/emitters/: CMakeLists.txt  SConscript  area.cpp  collimated.cpp  constant.cpp  directional.cpp  envmap.cpp  point.cpp  sky.cpp  spot.cpp  sun.cpp  sunsky.cpp
src/films/: CMakeLists.txt  SConscript  annotations.h  banner.h  cnpy.cpp  cnpy.h  exrfilm.cpp  hdrfilm.cpp  ldrfilm.cpp  mfilm.cpp  pngfilm.cpp  tiledhdrfilm.cpp
src/libpython/: CMakeLists.txt  SConscript  base.cpp  base.h  core.cpp  core.h  render.cpp
src/mtsgui/: CMakeLists.txt  SConscript  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  acknowledgmentdlg.cpp  acknowledgmentdlg.h  acknowledgmentdlg.ui  addserverdlg.cpp  addserverdlg.h  addserverdlg.ui  breakpad.mm  common.h  glwidget.cpp  glwidget.h  importdlg.cpp  importdlg.h  importdlg.ui  loaddlg.cpp  loaddlg.h  locateresourcedlg.cpp  locateresourcedlg.h  locateresourcedlg.ui  logwidget.cpp  logwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview.cpp  preview.h  preview_proc.cpp  previewsettingsdlg.cpp  previewsettingsdlg.h  previewsettingsdlg.ui  previewsettingsdlg_cocoa.cpp  previewsettingsdlg_cocoa.h  previewsettingsdlg_cocoa_impl.mm  programsettingsdlg.cpp  programsettingsdlg.h  (+30 more)
src/mtsgui/pch/: mtsgui_precompiled.hpp
src/mtsgui/resources/: docs.xml  stylesheet.css
src/mtsgui/shaders/: downsampling.frag  downsampling.vert  gamma.frag  logluminance.frag  logluminance.vert  reinhard.frag
tools/: build.bat  build.sh  qt4.py
(+1311 files in other folders)
